// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscribeForm renders default correctly 1`] = `
<div
  className="container  "
>
  <p
    className="description"
  >
    <b>
      Subscribe
    </b>
     to know whenever I post new content. I don't spam!
  </p>
  <form
    action="/subscribe"
    method="post"
    target="_blank"
  >
    <input
      name="lists"
      type="hidden"
      value="ml,web,misc"
    />
    <input
      name="Source"
      type="hidden"
      value="test"
    />
    <input
      aria-label="Email Address"
      autoCapitalize="off"
      autoCorrect="off"
      name="email"
      placeholder="example@domain.com"
      size="25"
      type="email"
    />
    <br />
    <input
      type="submit"
      value="SUBMIT"
    />
  </form>
</div>
`;

exports[`SubscribeForm renders large correctly 1`] = `
<div
  className="container large "
>
  <p
    className="description"
  >
    <b>
      Subscribe
    </b>
     to know whenever I post new content. I don't spam!
  </p>
  <form
    action="/subscribe"
    method="post"
    target="_blank"
  >
    <input
      name="lists"
      type="hidden"
      value="ml,web,misc"
    />
    <input
      name="Source"
      type="hidden"
      value="test"
    />
    <input
      aria-label="Email Address"
      autoCapitalize="off"
      autoCorrect="off"
      name="email"
      placeholder="example@domain.com"
      size="25"
      type="email"
    />
    <br />
    <input
      type="submit"
      value="SUBMIT"
    />
  </form>
</div>
`;
